<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>
    <string name="app_name">Wurdklok</string>

    <!--  BluetoothChat -->
    <string name="not_connected">Bist net ferbûn mei in apparaat</string>
    <string name="bt_not_enabled_leaving">Bluetooth stiet net oan. App wurd sluten.</string>
    <string name="title_connecting">ferbine&#8230;</string>
    <string name="title_connected_to">ferbûn: </string>
    <string name="title_not_connected">net ferbûn</string>
    <string name="make_connection">"Meitsje ferbining mei bluetooth HC-05"</string>
	<string name="nothing_received">"Neat ûntfongen"</string>
	<string name="get_alarm_time">"Helje alarm tiid"</string>
	<string name="set_time">"Tiid sette"</string>
	<string name="set_date">"Datum sette"</string>
	<string name="show_date">"Toan datum"</string>
	<string name="show_time">"Toan tiid"</string>
	<string name="open_matrix">Iepenje matrix</string>
	<string name="alarm">"Alarm"</string>
	<string name="brightness">"Helderens"</string>
	<string name="on">Oan</string>
    <string name="off">Ut</string>
    <string name="up">Omheech</string>
    <string name="down">Omleech</string>
    <string name="auto">Auto</string>
    <string name="self">Sels</string>
    <string name="refresh">Vernije</string>
    <string name="set_alarm">Sette</string>
    <string name="maxmin">Max/min</string>
    
    <!--  DeviceListActivity -->
    <string name="scanning">Sykje nei apparaten&#8230;</string>
    <string name="select_device">Kies een apparaat om mei te ferbinen</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">Gjin apparaten fûn</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Oare apparaten</string>
    <string name="button_scan">Scan nei apparaten</string>

    <!-- Options Menu -->
    <string name="connect">Ferbine</string>
    <string name="discoverable">Sichtber</string>
    
    <!--  Buttons -->
    <string name="sendMenos">Oan</string>
    <string name="sendMas">Ut</string>
    <string name="send_text">Stjoer tekst</string>
    <string name="message">Berjocht</string>
</resources>
