<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/small_pad"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/small_pad"
          android:orientation="horizontal" >
	
          <TextView
              android:id="@+id/textView2"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_gravity="left|center_vertical"
              android:layout_weight="1"
              android:text="@string/alarm"
              android:textAppearance="?android:attr/textAppearanceMedium" />
                      
          <TextView
              android:id="@+id/alarm_time"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="right|center_vertical"
              android:layout_marginLeft="@dimen/small_pad"
              android:layout_marginRight="@dimen/small_pad"
              android:textAppearance="?android:attr/textAppearanceLarge" 
              android:text="--:--" />

          <Button
              android:id="@+id/btn_set_alarm"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/set_alarm"
              android:onClick="showTimePickerDialog" />

          <ToggleButton
              android:id="@+id/toggleAlarmButton"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center_vertical"
              android:text="@string/on"
              android:textOff="@string/off"
              android:textOn="@string/on" />

      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical" >

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/small_pad" >

              <TextView
                  android:id="@+id/textView3"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center_vertical"
                  android:text="@string/brightness"
                  android:textAppearance="?android:attr/textAppearanceMedium" />

              <SeekBar
                  android:id="@+id/brightness_slider"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="@dimen/small_pad"
                  android:layout_weight="1"
                  android:max="255" />

              <ToggleButton
                  android:id="@+id/toggleBrightnessButton"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center_vertical"
                  android:checked="true"
                  android:text="@string/auto"
                  android:textOff="@string/auto"
                  android:textOn="@string/auto" />

          </LinearLayout>

      </LinearLayout>

    <EditText
        android:id="@+id/text_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_pad"
        android:ems="10"
        android:hint="@string/message" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_text" />

    <TextView
        android:id="@+id/text_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_pad"
        android:text="@string/nothing_received" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="vertical" >

            <Button
                android:id="@+id/button_setcurrenttime"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:minWidth="72dip"
                android:text="@string/set_time" />

            <Button
                android:id="@+id/button_setcurrentdate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_date" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_showdate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_date" />

            <Button
                android:id="@+id/btn_showtime"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_time" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
